# TodoList

./: .gitignore  CMakeLists.txt  README.md  Task.cpp  Task.h  ToDoList.cpp  ToDoList.h  main.cpp
test/: test_Task.cpp  test_ToDoList.cpp
